[387430] Applied patches to o.e.d.modelbase.sql and modelbase.sql.edit

--- a/plugins/org.eclipse.datatools.modelbase.sql.edit/plugin.properties
+++ b/plugins/org.eclipse.datatools.modelbase.sql.edit/plugin.properties
@@ -448,3 +448,7 @@ _UI_CollectionDataType_elementType_feature = Element Type
 _UI_CharacterSet_CharacterStringDataType_feature = Character String Data Type
 _UI_ElementType_CollectionDataType_feature = Collection Data Type
 _UI_IncrementType_RANDOM_literal = RANDOM
+_UI_IndexExpression_type = Index Expression
+_UI_UniqueConstraint_clustered_feature = Clustered
+_UI_IndexMember_expression_feature = Expression
+_UI_IndexExpression_sql_feature = Sql
