--- a/plugins/pom.xml
+++ b/plugins/pom.xml
@@ -4,18 +4,14 @@
     http://maven.apache.org/maven-v4_0_0.xsd"> 
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>org.eclipse.datatools.modelbase.releng</artifactId>
+    <artifactId>org.eclipse.datatools.modelbase.plugins</artifactId>
     <packaging>pom</packaging>
 
     <parent>
         <groupId>org.eclipse.datatools</groupId>
         <artifactId>org.eclipse.datatools.parent</artifactId>
         <version>1.13.0-SNAPSHOT</version>
-        <relativePath>../../../org.eclipse.datatools.build/releng/org.eclipse.datatools.releng</relativePath>
+        <relativePath>../../org.eclipse.datatools.build/releng/org.eclipse.datatools.releng</relativePath>
     </parent>
 
-    <modules>
-    	<module>../../plugins/org.eclipse.datatools.modelbase.sql</module>
-    	<module>../../plugins/org.eclipse.datatools.modelbase.dbdefinition</module>
-    </modules>
 </project>
